refs #100389.  Fix bug in equals().  Make ForwardingEntry static. Change "new Interger" to "Integer.valueOf".